testsuite/poke.pkl/xor-diag-2.pk
/* { dg-do compile } */

var a = 23#B ^
        Exception {};  /* { dg-error "invalid operand.*\n.*expected offset" } */
